package envio;

public interface EmpresaEnvio {
    void enviarPedido();
}
